--- a/TechVJ/template/req.html
+++ b/TechVJ/template/req.html
@@ -39,7 +39,7 @@
                         <!-- logo -->
                         <img src="https://graph.org/file/1b5d8822491d62882fffb.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
-                            <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" > S.H Nayem 👇 Prime Admin/Owner</h4>
+                            <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >𝐒.𝐇 𝐍𝐀𝐘𝐄𝐌 {𝐏𝐑𝐈𝐌𝐄 𝐀𝐃𝐌𝐈𝐍*𝐎𝐖𝐍𝐄𝐑}</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">The One & Only</p>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-paper-heart" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v1.133l.941.502A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765L2 3.133V2Zm0 2.267-.47.25A1 1 0 0 0 1 5.4v.817l1 .6v-2.55Zm1 3.15 3.75 2.25L8 8.917l1.25.75L13 7.417V2a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v5.417Zm11-.6 1-.6V5.4a1 1 0 0 0-.53-.882L14 4.267v2.55ZM8 2.982C9.664 1.309 13.825 4.236 8 8 2.175 4.236 6.336 1.31 8 2.982Zm7 4.401-4.778 2.867L15 13.117V7.383Zm-.035 6.88L8 10.082l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738ZM1 13.116l4.778-2.867L1 7.383v5.734Z"/>
                               </svg>
-                            <span class="ps-2">Thank you For Stay on Prime</span>
+                            <span class="ps-2">𝐓𝐇𝐀𝐍𝐊 𝐘𝐎𝐔 𝐅𝐎𝐑 𝐒𝐓𝐀𝐘 𝐖𝐈𝐓𝐇 𝐏𝐑𝐈𝐌𝐄 ✨</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-activity" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2Z"/>
                               </svg>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="text-center w-100 px-2 flex justify-center items-center gap-2">
                             <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-c-circle " viewBox="0 0 16 16"><path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8Zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM8.146 4.992c-1.212 0-1.927.92-1.927 2.502v1.06c0 1.571.703 2.462 1.927 2.462.979 0 1.641-.586 1.729-1.418h1.295v.093c-.1 1.448-1.354 2.467-3.03 2.467-2.091 0-3.269-1.336-3.269-3.603V7.482c0-2.261 1.201-3.638 3.27-3.638 1.681 0 2.935 1.054 3.029 2.572v.088H9.875c-.088-.879-.768-1.512-1.729-1.512Z"/></svg></span>
-                            <span class="font-bold bg-clip-text text-[18px] text-transparent bg-gradient-to-r from-yellow-400  via-orange-700 to-red-700" style="text-shadow: 3px 5px 11px black;">Prime Movie</span>
+                            <span class="font-bold bg-clip-text text-[18px] text-transparent bg-gradient-to-r from-yellow-400  via-orange-700 to-red-700" style="text-shadow: 3px 5px 11px black;">𝐏𝐑𝐈𝐌𝐄 𝐁𝐎𝐓'𝐒</span>
                         </div>
                     </div>
 
@@ -158,7 +158,7 @@
                     <div class="row d-flex w-100 justify-content-center align-items-center">
 
                         <div class="col-lg-7 col-12 d-flex justify-content-start align-items-center ">
-                            <p class="h4 px-2 mt-4 bg-clip-text text-transparent bg-gradient-to-r from-yellow-200 to-orange-600 font-bold mb-2">Play with.👇👇..</p>
+                            <p class="h4 px-2 mt-4 bg-clip-text text-transparent bg-gradient-to-r from-yellow-200 to-orange-600 font-bold mb-2">Play with.👇ANY ONE👇..</p>
                         </div>
                         <div class="col-lg-6 col-10 d-flex justify-center items-center flex-wrap pb-3 gap-2 wow animate__animated animate__fadeIn">
                             <div onclick="vlc_player()" class="card card-body col-lg-3  col-5 bg-dark text-secondary text-center justify-content-center align-items-center hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300 wow animate__animated animate__fadeInLeft">
@@ -192,7 +192,7 @@
                                 HD Player(4K)
                             </div>
                             <div onclick="lazyDownload()" class="col-lg-4 p-2 col-12 rounded-3xl bg-dark text-white text-center align-items-center hover:bg-gradient-to-r from-pink-500 to-violet-500 hover:shadow-md hover:shadow-gray-100 hover:translate-y-[-5px] transition transition-all duration-300 wow animate__animated animate__rubberBand">
-                                Download Now
+                                Download Now This Video ✨
                             </div>
                         </div>
                 </div>
@@ -200,14 +200,14 @@
             <div class="justify-content-center align-items-center w-100 d-flex mb-3">
                 <div class="row d-flex w-100 justify-content-center align-items-center">
                     <div class="col-lg-8 col-10  py-2 text-center bg-danger rounded-4 text-sm wow animate__animated animate__FadeIn">
-                            Video not playing ? possibly because your browser or the player doesn't support codec please download and watch.
+                            𝐈𝐟 𝐲𝐨𝐮𝐫 𝐯𝐢𝐝𝐞𝐨 𝐢𝐬 𝐧𝐨𝐭 𝐩𝐥𝐚𝐲𝐢𝐧𝐠 𝐭𝐡𝐞𝐧 👆👆𝐂𝐥𝐢𝐜𝐤 𝐭𝐨 𝐃𝐚𝐰𝐧𝐥𝐨𝐚𝐝.
                     </div>
                 </div>
             </div>
             <div class="justify-content-center align-items-center w-100 d-flex mb-3">
                 <div class="row d-flex w-100 justify-content-center align-items-center">
                     <div class="col-lg-5 col-10  py-2 text-center bg-success rounded-4 text-sm wow animate__animated animate__FadeIn">
-                        If you find any broken links then please contact Me 👇👇<a href="https://t.me/Prime_Nayem" class="text-[16px] font-bold underline active:text-blue-600">S.H Nayem (Prime Admin/Owner)</a>
+                        If you find any broken links then please contact Me <a href="https://t.me/Prime_Nayem" class="text-[16px] font-bold underline active:text-blue-600">𝐒.𝐇 𝐍𝐀𝐘𝐄𝐌 {𝐏𝐑𝐈𝐌𝐄 𝐀𝐃𝐌𝐈𝐍*𝐎𝐖𝐍𝐄𝐑}</a>
                     </div>
                 </div>
             </div>
@@ -258,12 +258,12 @@
                   <div class="row flex-row-reverse text-secondary justify-content-center align-items-center">
                       <div class="col-lg-6 col-12 justify-content-center align-items-center text-center p-1 wow animate__animated animate__fadeInRight">
                         <ul class="navbar-nav">
-                            <li class="navbar-item bg-gradient-to-r from-pink-500 rounded-xl p-2"> <h5 class="text-gray-100 font-semibold text-sm"> Think & just code it... </h5><sup class="badge badge-error text-xs text-gray-300 font-monospace">-S.H Nayem (Prime Admin/Owner)</sup> </li>
+                            <li class="navbar-item bg-gradient-to-r from-pink-500 rounded-xl p-2"> <h5 class="text-gray-100 font-semibold text-sm"> Think & just code it... </h5><sup class="badge badge-error text-xs text-gray-300 font-monospace">-𝐏𝐑𝐈𝐌𝐄 𝐁𝐎𝐓'𝐒 ✨</sup> </li>
                         </ul>
                     </div>
                     <div class="col-lg-6 col-12 justify-content-center align-items-center text-center p-1 wow animate__animated animate__fadeInLeft">
                         <ul class="navbar-nav">
-                            <li class="navbar-item bg-gradient-to-l from-pink-500 rounded-xl p-2 "> <h5 class="text-gray-100 font-semibold text-sm" > Success is the journey of millions of failure and lots of hard work </h5> <sup class="badge  text-xs text-gray-300 font-monospace">-S.H Nayem (Prime Admin/Owner)</sup> </li>
+                            <li class="navbar-item bg-gradient-to-l from-pink-500 rounded-xl p-2 "> <h5 class="text-gray-100 font-semibold text-sm" > Success is the journey of millions of failure and lots of hard work </h5> <sup class="badge  text-xs text-gray-300 font-monospace">-𝐒.𝐇 𝐍𝐀𝐘𝐄𝐌 {𝐏𝐑𝐈𝐌𝐄 𝐀𝐃𝐌𝐈𝐍*𝐎𝐖𝐍𝐄𝐑}</sup> </li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-4 justify-content-center align-items-center text-center mt-lg-0 mt-5  pt-lg-0 pt-4 wow animate__animated animate__fadeInUp">
@@ -294,7 +294,7 @@
                 var theDate=new Date() 
                     document.write(theDate.getFullYear()) 
             </script> Copyright :
-                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://t.me/Prime_Movies4U">S.H Nayem</a>
+                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://t.me/Prime_Botz">𝐏𝐑𝐈𝐌𝐄 𝐁𝐎𝐓'𝐒</a>
                 
                 All right reserved
             </div>   
