--- a/TechVJ/template/req.html
+++ b/TechVJ/template/req.html
@@ -76,11 +76,11 @@
                     </div>
                     <div class=" d-block px-5 wow animate__animated animate__fadeInRight ">
                         <a href="https://t.me/Prime_Movies4U" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Prime Movie Main Channel ⚡</a>
-                        <a href="https://t.me/+yRq4k6J8o2E0OWJl" type="button" class="btn btn-outline-secondary w-100 mt-1">Movie Request Group</a>
+                        <a href="https://t.me/+OG3sftDEbZ9kMzFl" type="button" class="btn btn-outline-secondary w-100 mt-1">Movie Request Group</a>
                         <a href="https://t.me/Prime_Nayem" type="button" class="btn btn-outline-secondary w-100 mt-1">Admin I'D</a>
                         <a href="https://t.me/Prime_Bots_Support_RoBot" type="button" class="btn btn-outline-secondary w-100 mt-1">Any Problem Connect Me</a>
                         <a href="https://t.me/Prime_Movies4U" type="button" class="btn btn-outline-secondary w-100 mt-1">Update Channel</a>
-                        <a href="https://t.me/+yRq4k6J8o2E0OWJl" type="button" class="btn btn-outline-secondary w-100 mt-1">All Movie + Wabseres</a>
+                        <a href="https://t.me/+OG3sftDEbZ9kMzFl" type="button" class="btn btn-outline-secondary w-100 mt-1">All Movie + Wabseres</a>
                     </div>
                     
                 <!-- section -->
